# learn-vulkan

./: .gitignore  README.md
integrity_test/: CMakeLists.txt
integrity_test/src/: main.cpp
main/1_drawing_a_triangle/: notes.md
main/1_drawing_a_triangle/code/: .clang-tidy
main/1_drawing_a_triangle/code-no-exception/: .clang-tidy  CMakeLists.txt
main/1_drawing_a_triangle/code-no-exception/assets/shader/: compile.sh
main/1_drawing_a_triangle/code-no-exception/include/: app.hpp  scene.hpp  vulkan.hpp
main/1_drawing_a_triangle/code/assets/shader/: shader.vert
main/1_drawing_a_triangle/code/include/: app.hpp  timer.hpp  vulkan.hpp
main/1_drawing_a_triangle/code/src/: main.cpp
resources/sources/: timer.hpp
